Changed password encoding after hash to match one made in the database script. Fixed bug where failing to login didn't prompt the user to reenter their information